Revision history for IRC::Client

{{$NEXT}}

4.0.14  2025-02-12T19:01:13+01:00
    - Fix pesky warning on startup, because the .^ver wasn't set

4.0.13  2025-01-16T15:03:13+01:00
    - Use modern test file extensions, and move release tests
      to "xt" directory, so they'd be run on upload
    - Remove test dependencies, as these are only needed for
      author testing
    - Moved the release tests out of immediate testing, as they
      (or the perl backend) have severely bitrotted
    - Update copyright year

4.0.12  2024-08-31T20:30:02+02:00
    - Bump version of IO::Socket::Async::SSL, and make it accept
      any future versions as well, to prevent clashes with
      e.g. Whateverable
    - Add separate badges for each OS
    - Add sponsor button
    - Update copyright year

4.0.11  2023-11-07T14:12:36+01:00
    - Don't cue ping tests for the same second.  This could happen when
      bursting a message to a channel.  Only one ping test will suffice
    - Update copyright year
    - Add sponsor link

4.0.10  2023-11-07T13:42:50+01:00
    - Set default ping-wait independent of last ping received.  This
      looks like it will fix bouncing behaviour of bots because they
      missed a PING

4.0.9  2022-10-27T11:46:56+02:00
    - Upped dependency on IO::Socket::Async::SSL, japhb++

4.0.8  2022-02-12T10:45:27+01:00
    - Upped dependency on IO::Socket::Async::SSL

4.0.7  2022-01-07T00:01:03+01:00
    - Make sure that an exception in react/whenever quits

4.0.6  2021-12-15T15:24:11+01:00
    - Make PING check more reliable by scheduling one every time
      the client says something on the server (apparently IRC servers
      treat anything the client says as a PONG, so the timeout timer
      server side appears to be reset then)
    - Remove the "use IRC::Client::Message" endpoint again, it was the
      wrong fix.  Code that is trying to use the separate module, should
      just remove that and just do a "use IRC::Client" instead
