@@ -18,7 +18,7 @@ jobs:
           - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v6
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
