@@ -7,7 +7,6 @@ IRC::Client - Extendable Internet Relay Chat client
 =head1 SYNOPSIS
 
 =begin code :lang<raku>
-
 use IRC::Client;
 use Pastebin;
 
@@ -24,7 +23,6 @@ use Pastebin;
             ~ Pastebin.new.paste: $text;
         }
     );
-
 =end code
 
 =head1 DESCRIPTION
@@ -35,7 +33,7 @@ and output post-processing.
 
 =head1 DOCUMENTATION MAP
 
-* [Blog Post](https://github.com/Raku/CCR/blob/main/Remaster/Zoffix%20Znet/IRC-Client-Raku-Multi-Server-IRC-or-Awesome-Async-Interfaces-with-Raku.md)
+* [Blog Post](https://raku.github.io/CCR/Remaster/Zoffix%20Znet/IRC-Client-Raku-Multi-Server-IRC-or-Awesome-Async-Interfaces-with-Raku.html)
 * [Basics Tutorial](https://github.com/lizmat/IRC-Client/blob/main/docs/01-basics.md)
 * [Event Reference](https://github.com/lizmat/IRC-Client/blob/main/docs/02-event-reference.md)
 * [Method Reference](https://github.com/lizmat/IRC-Client/blob/main/docs/03-method-reference.md)
@@ -63,7 +61,7 @@ deal to me!
 
 Copyright 2015-2021 Zoffix Znet
 
-Copyright 2021-2025 Elizabeth Mattijsen
+Copyright 2021-2026 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
